# dl-video

./: .gitignore  Containerfile  Makefile  README.md  check_syntax.py  demo.tape  dl-video  pyproject.toml  serve.py
.kiro/settings/: lsp.json
.kiro/specs/dl-video-textual-overhaul/: design.md  requirements.md  tasks.md
.kiro/specs/podman-container-integration/: design.md  requirements.md  tasks.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  WIKI_SETUP.md
src/dl_video/: __init__.py  __main__.py  app.py  app.tcss  models.py  progress_tracker.py  state_machine.py
src/dl_video/components/: __init__.py  album_selection.py  history_panel.py  input_form.py  jobs_panel.py  log_history_panel.py  log_panel.py  progress_panel.py  settings_panel.py  speed_chart.py  terminal_panel.py
src/dl_video/services/: __init__.py  backends.py  container_service.py  converter.py  downloader.py  errors.py  uploader.py
src/dl_video/utils/: __init__.py  clipboard.py  config.py  file_ops.py  history.py  slugifier.py  thumbnail_cache.py  validator.py
tests/: __init__.py  test_backends.py  test_config.py  test_container_service.py  test_errors.py  test_progress_tracker.py  test_services.py  test_slugifier.py  test_snapshots.py  test_state_machine.py  test_validator.py
tests/__snapshots__/test_snapshots/: TestAppSnapshots.test_initial_state.raw  TestAppSnapshots.test_settings_expanded.raw  TestAppSnapshots.test_with_url_input.raw  TestInputFormSnapshots.test_filename_field_visible.raw  TestInputFormSnapshots.test_invalid_url.raw  TestInputFormSnapshots.test_valid_url.raw  TestLogHistoryPanelSnapshots.test_history_tab.raw  TestLogHistoryPanelSnapshots.test_log_tab.raw
